<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_details"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context=".ui.plants.PlantDetailsFragment">

    <ImageView
        android:id="@+id/plantImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="50dp"
        android:layout_weight="2"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/plantSciName"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plantSciName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plantSciName"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/plantFamily"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plantFamily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plantFamily"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/plantObservations"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plantObservations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plantObservations"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/plantDiscovery"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plantDiscovery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plantDiscovery"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/plantBiblio"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plantBiblio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plantBiblio"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>